# Qt2AndroidFrame

./: .clang-format  .gitignore  AndroidDebug.ps1  CMakeLists.txt  CMakePresets.json  README.md  buildingApp.sh  creatAndroid.sh  creatApp.sh  vcpkg.json
android/: AndroidManifest.xml
android/android-build/: AndroidManifest.xml
android/gradle/wrapper/: gradle-wrapper.properties
cmake/: import3rd.cmake  importConfig.cmake  importQt.cmake  importSource.cmake
cmakes/: import3rd.cmake  importAndroid.cmake  importConfig.cmake  importQt.cmake
presets/: CMakePresets-Android.json  CMakePresets-PC.json
src/: main.cpp
src/Logger/: Logger.cpp  Logger.h
src/SystemConfig/: SystemConfig.cpp  SystemConfig.h
src/ViewEngine/: ViewEngine.cpp  ViewEngine.h
third/Logger/: CMakeLists.txt
third/Logger/cmake/: import3rd.cmake
third/Logger/presets/: CMakePresets-Android.json
third/Logger/src/: Logger.cpp  Logger.h
third/SonixBeautyUi/: CMakeLists.txt
third/SonixBeautyUi/cmake/: importConfig.cmake  importSource.cmake
third/SonixBeautyUi/cmakes/: importSource.cmake
third/SonixBeautyUi/config/: GlobalVar.qml  ThemeManager.qml  Themes.qml
third/SonixBeautyUi/content/: ApplicationTip.qml  HButton.qml  ImageLabel.qml  SButton.qml  VButton.qml
third/SonixLogger/: CMakeLists.txt
third/SonixLogger/presets/: CMakePresets-PC.json
third/WifiConfig/: CMakeLists.txt
third/WifiConfig/cmake/: importConfig.cmake  importSource.cmake
third/WifiConfig/cmakes/: importConfig.cmake
third/WifiConfig/include/: WifiConfigBase.h
third/ZeroUi/: CMakeLists.txt
view/: App.qml  Main.qml
view/HomePage/: HomePage.qml  ProbeDevice.qml
(+22 files in other folders)
